2010-04-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psx07/init.c, psx07/task.c: Introduce enough of a delay so the Init()
	thread can reliably reach the pthread_join() call.

2010-04-25	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* psxreaddir/psxreaddir.scn, psxreaddir/test.c: Do not test for
	rewinddir(NULL) since we are now using newlib's implementation and it
	does not check for NULL. This causes a fault on some targets.

2010-04-03	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psx07/init.c, psx09/init.c, psx12/init.c, psxhdrs/pthread11.c,
	psxhdrs/pthread22.c, psxhdrs/sched01.c, psxhdrs/sched03.c:
	Reflect POSIX changes to sched_param.

2010-04-02	Ralf CorsÃ©pius <ralf.corsepius@rtems.org>

	* psxhdrs/proc01.c, psxhdrs/proc02.c, psxhdrs/proc07.c,
	psxhdrs/proc08.c, psxhdrs/proc09.c, psxhdrs/proc10.c,
	psxhdrs/proc11.c, psxhdrs/proc12.c, psxhdrs/proc13.c,
	psxhdrs/proc14.c, psxhdrs/signal20.c, psxhdrs/signal21.c:
	#include <unistd.h>.

2009-12-28	Shrikant Gaikwad <n3oo3n@gmail.com>

	* psx13/test.c, psx13/psx13.scn Added new routine PipeTestNull()
	to cover the trivial NULL case for pipe function.

2009-12-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxrwlock01/test.c, psxspin01/test.c, psxspin02/test.c: Fix spacing
	and compilation issues. Initial test build was accidentally without
	POSIX enabled.

2009-12-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/pmacros.h, psx01/task.c, psx02/init.c, psx02/task.c,
	psx03/init.c, psx03/task.c, psx04/init.c, psx04/task1.c,
	psx04/task2.c, psx04/task3.c, psx05/init.c, psx05/task.c,
	psx05/task2.c, psx05/task3.c, psx06/init.c, psx06/task.c,
	psx06/task2.c, psx07/init.c, psx08/init.c, psx08/task2.c,
	psx08/task3.c, psx09/init.c, psx10/init.c, psx10/task.c,
	psx10/task2.c, psx10/task3.c, psx11/init.c, psx11/task.c,
	psx12/init.c, psxalarm01/init.c, psxbarrier01/test.c,
	psxcancel01/init.c, psxchroot01/test.c, psxclock/init.c,
	psxfile01/test.c, psxfile01/test_cat.c, psxfile01/test_extend.c,