@@ -1,5 +1,9 @@
 2010-04-25	Joel Sherrill <joel.sherrill@oarcorp.com>
 
+	* psxrdwrv/test.c: Use SIZE_MAX not SSIZE_MAX.
+
+2010-04-25	Joel Sherrill <joel.sherrill@oarcorp.com>
+
 	* psx07/init.c, psx07/task.c: Introduce enough of a delay so the Init()
 	thread can reliably reach the pthread_join() call.
 
